# Marmaton

./: .gitignore  AGENTS.md  LICENSE  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: build-apk.yml  claude-code-review.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  llama-jni.cpp
app/src/main/java/com/marmaton/agent/: AgentForegroundService.kt  MainActivity.kt  MarmatonAccessibilityService.kt  MarmatonApplication.kt  ModelDownloadService.kt
app/src/main/java/com/marmaton/agent/analytics/: Analytics.kt  AnalyticsSink.kt  NoopAnalyticsSink.kt  PostHogAnalyticsSink.kt
app/src/main/java/com/marmaton/agent/audio/: AgentVoice.kt  AndroidTtsEngine.kt  TtsEngine.kt
app/src/main/java/com/marmaton/agent/chat/: ChatSession.kt
app/src/main/java/com/marmaton/agent/llm/: AICoreBackend.kt  AgentReasoner.kt  BackendFactory.kt  CloudBackend.kt  GemmaAgentEngine.kt  GgufBackend.kt  LlmBackend.kt  LocalFileBackend.kt  ModelCatalog.kt  OllamaBackend.kt  SecurePreferences.kt  SettingsPersistence.kt
app/src/main/java/com/marmaton/agent/model/: AgentAction.kt
app/src/main/java/com/marmaton/agent/parser/: ScreenNode.kt  (+1 more)
app/src/main/res/values/: strings.xml
app/src/main/res/xml/: accessibility_service_config.xml  file_paths.xml  network_security_config.xml
app/src/test/java/com/marmaton/agent/: AnalyticsTest.kt  ChatAndWorkflowTest.kt  LlmBackendTest.kt  ParserSerializerTest.kt
docs/: LLM_BACKENDS.md  PRIVACY.md  QA_AND_USABILITY.md  UI_DESIGN.md
gradle/: libs.versions.toml
(+14 files in other folders)
